force-app/main/default/objects/COM_Note__c/COM_Note__c.object-meta.xml
<CustomObject>
    <label>Note</label>
    <nameField>
        <label>Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>