force-app/main/default/objects/COM_Note__c/fields/Account_lk__c.field-meta.xml
<CustomField>
    <fullName>Account_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Note</relationshipLabel>
    <relationshipName>NoteByAccount</relationshipName>
    <type>Lookup</type>
</CustomField>