force-app/main/default/objects/COM_Note__c/fields/AccountAddress_fm__c.field-meta.xml
<CustomField>
    <fullName>AccountAddress_fm__c</fullName>
    <formula>IF(ISBLANK(Account_lk__r.Address__City__s), &quot;&quot;, Account_lk__r.Address__City__s &amp; &quot;, &quot;) &amp;
IF(ISBLANK(TEXT(Account_lk__r.Address__CountryCode__s)), &quot;&quot;, TEXT(Account_lk__r.Address__CountryCode__s) &amp; &quot;, &quot;) &amp;
IF(ISBLANK(TEXT(Account_lk__r.Address__StateCode__s)), &quot;&quot;, TEXT(Account_lk__r.Address__StateCode__s) &amp; &quot;, &quot;) &amp;
IF(ISBLANK(Account_lk__r.Address__Street__s), &quot;&quot;, Account_lk__r.Address__Street__s &amp; &quot; &quot;) &amp;
IF(ISBLANK(Account_lk__r.Address__PostalCode__s), &quot;&quot;, &quot;(&quot; &amp; Account_lk__r.Address__PostalCode__s &amp; &quot;)&quot;)</formula>
    <label>Account Address</label>
    <type>Text</type>
</CustomField>