force-app/main/default/objects/COM_Note__c/fields/CedantFacility_lk__c.field-meta.xml
<CustomField>
    <fullName>CedantFacility_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cedant Facility</label>
    <referenceTo>COM_Facility__c</referenceTo>
    <relationshipLabel>Note</relationshipLabel>
    <relationshipName>NoteByCedantFacility</relationshipName>
    <type>Lookup</type>
</CustomField>