force-app/main/default/objects/COM_Note__c/fields/CededRIPrem_fm__c.field-meta.xml
<CustomField>
    <fullName>CededRIPrem_fm__c</fullName>
    <formula>Prem__c * RIOrderPct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEDED R/I PREMIUM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>