force-app/main/default/objects/COM_Note__c/fields/ChildClaim_lk__c.field-meta.xml
<CustomField>
    <fullName>ChildClaim_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Claim No.</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Note</relationshipLabel>
    <relationshipName>NoteByChildClaim</relationshipName>
    <type>Lookup</type>
</CustomField>