force-app/main/default/objects/COM_Note__c/fields/ClaimCurrency_fm__c.field-meta.xml
<CustomField>
    <fullName>ClaimCurrency_fm__c</fullName>
    <formula>TEXT(ChildClaim_lk__r.ClaimCurrency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Currency</label>
    <type>Text</type>
</CustomField>