force-app/main/default/objects/COM_Note__c/fields/ClaimOffSet_fm__c.field-meta.xml
<CustomField>
    <fullName>ClaimOffSet_fm__c</fullName>
    <formula>FacilityParticipant_lk__r.ClaimOffset_is__c</formula>
    <label>Claim Off-Set</label>
    <type>Checkbox</type>
</CustomField>