force-app/main/default/objects/COM_Note__c/fields/Closing_Origin_fm__c.field-meta.xml
<CustomField>
    <fullName>Closing_Origin_fm__c</fullName>
    <formula>TEXT(SettlementLineItem__r.ClosingOrign__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Origin</label>
    <type>Text</type>
</CustomField>