force-app/main/default/objects/COM_Note__c/fields/DateOfLoss_fm__c.field-meta.xml
<CustomField>
    <fullName>DateOfLoss_fm__c</fullName>
    <formula>ChildClaim_lk__r.LossDate__c</formula>
    <label>Date of Loss</label>
    <type>Text</type>
</CustomField>