force-app/main/default/objects/COM_Note__c/fields/DuetoNoteIssuer__c.field-meta.xml
<CustomField>
    <fullName>DuetoNoteIssuer__c</fullName>
    <label>TOTAL DUE TO [Note Issuer]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>