force-app/main/default/objects/COM_Note__c/fields/DuetoUnderwriter_fm__c.field-meta.xml
<CustomField>
    <fullName>DuetoUnderwriter_fm__c</fullName>
    <formula>CededRIPrem_fm__c - TotalDeductionAmt_fm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL DUE TO UNDERWRITER</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>