force-app/main/default/objects/COM_Note__c/fields/ExcessLayer__c.field-meta.xml
<CustomField>
    <fullName>ExcessLayer__c</fullName>
    <label>Excess Layer</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>