force-app/main/default/objects/COM_Note__c/fields/FacilityBDX_lk__c.field-meta.xml
<CustomField>
    <fullName>FacilityBDX_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility BDX</label>
    <referenceTo>COM_FacilityBDX__c</referenceTo>
    <relationshipLabel>Note</relationshipLabel>
    <relationshipName>NoteByFacilityBDX</relationshipName>
    <type>Lookup</type>
</CustomField>