force-app/main/default/objects/COM_Note__c/fields/FacilityBDXCycle_fm__c.field-meta.xml
<CustomField>
    <fullName>FacilityBDXCycle_fm__c</fullName>
    <formula>FacilityBDX_lk__r.BDXPeriod__c</formula>
    <label>Facility BDX (Cycle)</label>
    <type>Text</type>
</CustomField>