force-app/main/default/objects/COM_Note__c/fields/FacilityBDXLineItem_lk__c.field-meta.xml
<CustomField>
    <fullName>FacilityBDXLineItem_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility BDX Line Item</label>
    <referenceTo>COM_FacilityBDXLineItem__c</referenceTo>
    <relationshipLabel>Note</relationshipLabel>
    <relationshipName>NoteByFacilityBDXLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>