force-app/main/default/objects/COM_Note__c/fields/FacilityBillingCycle_fm__c.field-meta.xml
<CustomField>
    <fullName>FacilityBillingCycle_fm__c</fullName>
    <formula>TEXT(FacilityParticipant_lk__r.BillingCycle__c)</formula>
    <label>Facility Billing Cycle</label>
    <type>Text</type>
</CustomField>