force-app/main/default/objects/COM_Note__c/fields/GrossPrem__c.field-meta.xml
<CustomField>
    <fullName>GrossPrem__c</fullName>
    <label>GROSS PREMIUM(100%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>