force-app/main/default/objects/COM_Note__c/fields/InstallmentSeq__c.field-meta.xml
<CustomField>
    <fullName>InstallmentSeq__c</fullName>
    <label>Installment Seq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>