force-app/main/default/objects/COM_Note__c/fields/InstallPct__c.field-meta.xml
<CustomField>
    <fullName>InstallPct__c</fullName>
    <label>Install (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>