force-app/main/default/objects/COM_Note__c/fields/Insured_fm__c.field-meta.xml
<CustomField>
    <fullName>Insured_fm__c</fullName>
    <formula>Placement_lk__r.LKInsured__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured</label>
    <type>Text</type>
</CustomField>