force-app/main/default/objects/COM_Note__c/fields/Insured_lk__c.field-meta.xml
<CustomField>
    <fullName>Insured_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insured</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Note (Insured)</relationshipLabel>
    <relationshipName>NoteByInsured</relationshipName>
    <type>Lookup</type>
</CustomField>