force-app/main/default/objects/COM_Note__c/fields/Inusred__c.field-meta.xml
<CustomField>
    <fullName>Inusred__c</fullName>
    <label>Inusred</label>
    <length>255</length>
    <type>Text</type>
</CustomField>