force-app/main/default/objects/COM_Note__c/fields/LKRefNReins__c.field-meta.xml
<CustomField>
    <fullName>LKRefNReins__c</fullName>
    <label>LK Ref No(Reinsurance)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>