force-app/main/default/objects/COM_Note__c/fields/LOB1_fm__c.field-meta.xml
<CustomField>
    <fullName>LOB1_fm__c</fullName>
    <formula>TEXT(Placement_lk__r.LOB1__c)</formula>
    <label>LOB1</label>
    <type>Text</type>
</CustomField>