force-app/main/default/objects/COM_Note__c/fields/LOB2_fm__c.field-meta.xml
<CustomField>
    <fullName>LOB2_fm__c</fullName>
    <formula>TEXT(Placement_lk__r.LOB2__c)</formula>
    <label>LOB2</label>
    <type>Text</type>
</CustomField>