force-app/main/default/objects/COM_Note__c/fields/LOB3_fm__c.field-meta.xml
<CustomField>
    <fullName>LOB3_fm__c</fullName>
    <formula>TEXT(Placement_lk__r.LOB3__c)</formula>
    <label>LOB3</label>
    <type>Text</type>
</CustomField>