force-app/main/default/objects/COM_Note__c/fields/LocationOfLoss_fm__c.field-meta.xml
<CustomField>
    <fullName>LocationOfLoss_fm__c</fullName>
    <formula>IF(ISBLANK(ChildClaim_lk__r.ParentClaim_lk__c), 
   &quot;&quot;, 
   HYPERLINK(&quot;/lightning/r/ChildClaim_lk__r.ParentClaim_lk__c/&quot; &amp; ChildClaim_lk__c  &amp; &quot;/related/Location_of_Loss__r/view&quot;, &quot;Location of Loss List&quot;)
)</formula>
    <label>Location of Loss</label>
    <type>Text</type>
</CustomField>