force-app/main/default/objects/COM_Note__c/fields/NetToLKPrem__c.field-meta.xml
<CustomField>
    <fullName>NetToLKPrem__c</fullName>
    <label>Net Share (Net to LK Prem)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>