force-app/main/default/objects/COM_Note__c/fields/NoteAmount__c.field-meta.xml
<CustomField>
    <fullName>NoteAmount__c</fullName>
    <label>Origin Note Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>