force-app/main/default/objects/COM_Note__c/fields/NoteAmtBalance__c.field-meta.xml
<CustomField>
    <fullName>NoteAmtBalance__c</fullName>
    <label>Origin Note Amount (Balance)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>