force-app/main/default/objects/COM_Note__c/fields/NoteAmtSettled__c.field-meta.xml
<CustomField>
    <fullName>NoteAmtSettled__c</fullName>
    <label>Origin Note Amount(Settled)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>