force-app/main/default/objects/COM_Note__c/fields/NoteAmtSOC__c.field-meta.xml
<CustomField>
    <fullName>NoteAmtSOC__c</fullName>
    <label>Orign Note Amount (SOC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>