force-app/main/default/objects/COM_Note__c/fields/NoteContact_lk__c.field-meta.xml
<CustomField>
    <fullName>NoteContact_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Note Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Note</relationshipLabel>
    <relationshipName>NoteByNoteContact</relationshipName>
    <type>Lookup</type>
</CustomField>