force-app/main/default/objects/COM_Note__c/fields/NoteIssuer__c.field-meta.xml
<CustomField>
    <fullName>NoteIssuer__c</fullName>
    <label>Note Issuer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LK Insurance Services</fullName>
            </value>
            <value>
                <fullName>LK Re</fullName>
            </value>
            <value>
                <fullName>LK Vn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>