force-app/main/default/objects/COM_Note__c/fields/NoteParticular__c.field-meta.xml
<CustomField>
    <fullName>NoteParticular__c</fullName>
    <label>Note Particular</label>
    <length>255</length>
    <type>Text</type>
</CustomField>