force-app/main/default/objects/COM_Note__c/fields/NotePPWDueDate__c.field-meta.xml
<CustomField>
    <fullName>NotePPWDueDate__c</fullName>
    <label>Note PPW DUE DATE</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>