force-app/main/default/objects/COM_Note__c/fields/NoteStatus__c.field-meta.xml
<CustomField>
    <fullName>NoteStatus__c</fullName>
    <label>Note Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Non-Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>