force-app/main/default/objects/COM_Note__c/fields/NoteTitle__c.field-meta.xml
<CustomField>
    <fullName>NoteTitle__c</fullName>
    <label>Note Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEBIT NOTE</fullName>
            </value>
            <value>
                <fullName>CREDIT NOTE</fullName>
            </value>
            <value>
                <fullName>COVER NOTE</fullName>
            </value>
            <value>
                <fullName>COMMISSION CREDIT NOTE</fullName>
                <isActive>false</isActive>
                <label>COMMISSION CREDIT NOTE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>