force-app/main/default/objects/COM_Note__c/fields/NoteType_cd__c.field-meta.xml
<CustomField>
    <fullName>NoteType_cd__c</fullName>
    <label>Note Type(C/D)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debit</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>