force-app/main/default/objects/COM_Note__c/fields/NoteType_Issueto__c.field-meta.xml
<CustomField>
    <fullName>NoteType_Issueto__c</fullName>
    <label>Note Type(Issue to)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>