force-app/main/default/objects/COM_Note__c/fields/OtherDeductionsAmt_fm__c.field-meta.xml
<CustomField>
    <fullName>OtherDeductionsAmt_fm__c</fullName>
    <formula>CededRIPrem_fm__c * OtherDeductionsPct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OTHER DEDUCTIONS AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>