force-app/main/default/objects/COM_Note__c/fields/Panel_lk__c.field-meta.xml
<CustomField>
    <fullName>Panel_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Panel</label>
    <referenceTo>OPP_Panel__c</referenceTo>
    <relationshipLabel>Note</relationshipLabel>
    <relationshipName>NoteByPanel</relationshipName>
    <type>Lookup</type>
</CustomField>