force-app/main/default/objects/COM_Note__c/fields/PanelFinalized__c.field-meta.xml
<CustomField>
    <fullName>PanelFinalized__c</fullName>
    <label>Panel Finalized</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>