force-app/main/default/objects/COM_Note__c/fields/ParentClaimNo_fm__c.field-meta.xml
<CustomField>
    <fullName>ParentClaimNo_fm__c</fullName>
    <formula>ChildClaim_lk__r.ParentClaim_lk__r.Name</formula>
    <label>Parent Claim No.</label>
    <type>Text</type>
</CustomField>