force-app/main/default/objects/COM_Note__c/fields/PeriodFrom_fm__c.field-meta.xml
<CustomField>
    <fullName>PeriodFrom_fm__c</fullName>
    <formula>Panel_lk__r.Layer_md__r.Placement_lk__r.InceptionDate__c</formula>
    <label>Period From</label>
    <type>Date</type>
</CustomField>