force-app/main/default/objects/COM_Note__c/fields/PeriodTo_fm__c.field-meta.xml
<CustomField>
    <fullName>PeriodTo_fm__c</fullName>
    <formula>Panel_lk__r.Layer_md__r.Placement_lk__r.ExpirationDate__c</formula>
    <label>Period To</label>
    <type>Date</type>
</CustomField>