force-app/main/default/objects/COM_Note__c/fields/PlacingAdminFee__c.field-meta.xml
<CustomField>
    <fullName>PlacingAdminFee__c</fullName>
    <label>[Placing Co-Broker] ADMIN FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>