force-app/main/default/objects/COM_Note__c/fields/PlacingBrkgAmt_fm__c.field-meta.xml
<CustomField>
    <fullName>PlacingBrkgAmt_fm__c</fullName>
    <formula>TotalBrkgAmt__c * PlacingBrkgPct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[Placing Broker] BROKERAGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>