force-app/main/default/objects/COM_Note__c/fields/PlacingBrkgPct__c.field-meta.xml
<CustomField>
    <fullName>PlacingBrkgPct__c</fullName>
    <label>[Placing Co-Broker] BROKERAGE(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>