force-app/main/default/objects/COM_Note__c/fields/PPWDays__c.field-meta.xml
<CustomField>
    <fullName>PPWDays__c</fullName>
    <label>PPW Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>