force-app/main/default/objects/COM_Note__c/fields/PPWDays_fm__c.field-meta.xml
<CustomField>
    <fullName>PPWDays_fm__c</fullName>
    <formula>VALUE(TEXT(Slip_lk__r.PremiumPaymentTermDays__c))</formula>
    <label>PPW Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>