force-app/main/default/objects/COM_Note__c/fields/PPWType__c.field-meta.xml
<CustomField>
    <fullName>PPWType__c</fullName>
    <label>PPW Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>