force-app/main/default/objects/COM_Note__c/fields/Prem__c.field-meta.xml
<CustomField>
    <fullName>Prem__c</fullName>
    <label>PREMIUM(100%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>