force-app/main/default/objects/COM_Note__c/fields/ProducingAdminFee__c.field-meta.xml
<CustomField>
    <fullName>ProducingAdminFee__c</fullName>
    <label>[Producing Co-Broker] ADMIN FEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>