force-app/main/default/objects/COM_Note__c/fields/ProducingBrkg__c.field-meta.xml
<CustomField>
    <fullName>ProducingBrkg__c</fullName>
    <label>[Producing Co-Broker] BROKERAGE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>