force-app/main/default/objects/COM_Note__c/fields/Reinsured_lk__c.field-meta.xml
<CustomField>
    <fullName>Reinsured_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reinsured</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Note (Reinsured)</relationshipLabel>
    <relationshipName>NoteByReinsured</relationshipName>
    <type>Lookup</type>
</CustomField>