force-app/main/default/objects/COM_Note__c/fields/Reversed_is__c.field-meta.xml
<CustomField>
    <fullName>Reversed_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reversed</label>
    <type>Checkbox</type>
</CustomField>