force-app/main/default/objects/COM_Note__c/fields/RevisedPPWDate__c.field-meta.xml
<CustomField>
    <fullName>RevisedPPWDate__c</fullName>
    <label>Revised PPW Date</label>
    <type>Date</type>
</CustomField>