force-app/main/default/objects/COM_Note__c/fields/RICommAmt_fm__c.field-meta.xml
<CustomField>
    <fullName>RICommAmt_fm__c</fullName>
    <formula>CededRIPrem_fm__c * RICommPct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RI COMMISSION AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>