force-app/main/default/objects/COM_Note__c/fields/RICommPct__c.field-meta.xml
<CustomField>
    <fullName>RICommPct__c</fullName>
    <label>RI COMMISSION(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>