force-app/main/default/objects/COM_Note__c/fields/RIOrderPct__c.field-meta.xml
<CustomField>
    <fullName>RIOrderPct__c</fullName>
    <label>R/I ORDER(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>