force-app/main/default/objects/COM_Note__c/fields/SettlementLineItem__c.field-meta.xml
<CustomField>
    <fullName>SettlementLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Settlement Line Item</label>
    <referenceTo>SettlementLineItem__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>Notes_SettlementLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>