force-app/main/default/objects/COM_Note__c/fields/SignedPercent__c.field-meta.xml
<CustomField>
    <fullName>SignedPercent__c</fullName>
    <label>Signed Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>