force-app/main/default/objects/COM_Note__c/fields/SLIID__c.field-meta.xml
<CustomField>
    <fullName>SLIID__c</fullName>
    <label>(X)SLI ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>