force-app/main/default/objects/COM_Note__c/fields/Slip_lk__c.field-meta.xml
<CustomField>
    <fullName>Slip_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Slip</label>
    <referenceTo>OPP_SlipInfo__c</referenceTo>
    <relationshipLabel>Note</relationshipLabel>
    <relationshipName>NoteBySlip</relationshipName>
    <type>Lookup</type>
</CustomField>