force-app/main/default/objects/COM_Note__c/fields/SOA_lk__c.field-meta.xml
<CustomField>
    <fullName>SOA_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOA</label>
    <referenceTo>SOA_Statement__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>NotesBySOA</relationshipName>
    <type>Lookup</type>
</CustomField>