force-app/main/default/objects/COM_Note__c/fields/SOANo_fm__c.field-meta.xml
<CustomField>
    <fullName>SOANo_fm__c</fullName>
    <formula>SOA_lk__r.Name</formula>
    <label>SOA No.</label>
    <type>Text</type>
</CustomField>