force-app/main/default/objects/COM_Note__c/fields/SOCSeq_fm__c.field-meta.xml
<CustomField>
    <fullName>SOCSeq_fm__c</fullName>
    <formula>ChildClaim_lk__r.SOCPLASeq__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOC Seq</label>
    <type>Text</type>
</CustomField>