force-app/main/default/objects/COM_Note__c/fields/SubjectivityDetail__c.field-meta.xml
<CustomField>
    <fullName>SubjectivityDetail__c</fullName>
    <description>동일 재보험사가 N개의 Layer 참여시, 한번만 표기
Subjectivity의 type(Addition, Amendment, Cancellation)에 따라 
Subjectivity의 Clear_is__c=&apos;false&apos;이면 입력된 내용을 표기</description>
    <label>Subjectivity Detail</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>