force-app/main/default/objects/COM_Note__c/fields/TotalBrkgAmt__c.field-meta.xml
<CustomField>
    <fullName>TotalBrkgAmt__c</fullName>
    <label>TOTAL BROKERAGE AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>