force-app/main/default/objects/COM_Note__c/fields/TotalDeductionAmt_fm__c.field-meta.xml
<CustomField>
    <fullName>TotalDeductionAmt_fm__c</fullName>
    <formula>CededRIPrem_fm__c * TotalDeductionPct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL DEDUCTION AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>