force-app/main/default/objects/COM_Note__c/fields/TotalDeductionPct__c.field-meta.xml
<CustomField>
    <fullName>TotalDeductionPct__c</fullName>
    <label>TOTAL DEDUCTION(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>