force-app/main/default/objects/COM_Note__c/fields/TotalDuetoCoBrokerSeperate__c.field-meta.xml
<CustomField>
    <fullName>TotalDuetoCoBrokerSeperate__c</fullName>
    <label>TOTAL DUE TO [Placing Co-Broker]Seperate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>