force-app/main/default/objects/COM_Note__c/fields/TotalDuetoPlacingTogether__c.field-meta.xml
<CustomField>
    <fullName>TotalDuetoPlacingTogether__c</fullName>
    <label>TOTAL DUE TO [Placing Co-Broker]Together</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>