force-app/main/default/objects/COM_Note__c/fields/TotalDuetoProducing_fm__c.field-meta.xml
<CustomField>
    <fullName>TotalDuetoProducing_fm__c</fullName>
    <formula>CededRIPrem_fm__c - RICommAmt_fm__c - OtherDeductionsAmt_fm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DUE TO [Producing Co-Broker]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>