force-app/main/default/objects/COM_Note__c/fields/Type_fm__c.field-meta.xml
<CustomField>
    <fullName>Type_fm__c</fullName>
    <formula>TEXT(Slip_lk__r.RIType__c)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>