force-app/main/default/objects/COM_Note__c/fields/UnderwriterRefNo_fm__c.field-meta.xml
<CustomField>
    <fullName>UnderwriterRefNo_fm__c</fullName>
    <formula>Panel_lk__r.UnderwriterRefNo__c</formula>
    <label>Underwriter Ref No.</label>
    <type>Text</type>
</CustomField>