force-app/main/default/objects/COM_Note__c/recordTypes/CD_Note.recordType-meta.xml
<RecordType>
    <fullName>CD_Note</fullName>
    <active>true</active>
    <description>Credit/Debit Note 발행을 위한 record</description>
    <label>C/D Note</label>
</RecordType>