force-app/main/default/objects/COM_Note__c/recordTypes/Cover_Note.recordType-meta.xml
<RecordType>
    <fullName>Cover_Note</fullName>
    <active>true</active>
    <description>Cover Note 발행을 위한 record</description>
    <label>Cover Note</label>
</RecordType>